--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hola
+<!Doctype html>
+<html>
+    <head> 
+        <meta charset="utf-8" />
+        <title>Villa Platzi</title>
+    </head>
+    <body>
+        <h1>Vamos a jugar con villa Platzi.</h1>
+        <canvas width="500px" height="500px" id="villaplatzi">
+            
+        </canvas>
+        <script src="villaP.js" type="text/javascript" >
+        </script>
+    </body>
+</html>
